riscv-pac/tests/ui/fail_more_than_one_trait.stderr
error: custom attribute panicked
 --> tests/ui/fail_more_than_one_trait.rs:1:1
  |
1 | #[riscv_pac::pac_enum(unsafe InterruptNumber, unsafe PriorityNumber)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Wrong attribute format. Expected: 'riscv_pac::pac_enum(unsafe <PacTraitToImplement>)'
